application/kustomize/exercise-app/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-app
  labels:
    app: exercise-app
spec:
  selector:
    matchLabels:
      app: exercise-app
  template:
    metadata:
      labels:
        app: exercise-app
    spec:
      containers:
        - name: exercise-app
          image: glendmaatita/exercise-app:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 30Mi
              cpu: 30m
            limits:
              memory: 40Mi
              cpu: 40m
      restartPolicy: Always
      imagePullSecrets:
        - name: docker-secret
