application/kustomize/exercise-app/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: exercise-app
  labels:
    app: exercise-app
spec:
  selector:
    app: exercise-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
