application/kustomize/exercise-app/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exercise-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: exercise-app-staging.bootcamp.onxp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: exercise-app
                port: 
                  number: 80
  tls:
    - hosts:
        - exercise-app-staging.bootcamp.onxp.net
      secretName: tls-secret-exercise-app
---
