application/kustomize/exercise-app/base/manifests.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-app
  labels:
    app: exercise-app
spec:
  selector:
    matchLabels:
      app: exercise-app
  template:
    metadata:
      labels:
        app: exercise-app
    spec:
      containers:
        - name: exercise-app
          image: glendmaatita/exercise-app:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 30Mi
              cpu: 30m
            limits:
              memory: 40Mi
              cpu: 40m
      restartPolicy: Always
      imagePullSecrets:
        - name: docker-secret

---
apiVersion: v1
kind: Service
metadata:
  name: exercise-app
  labels:
    app: exercise-app
spec:
  selector:
    app: exercise-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exercise-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: public
  rules:
    - host: exercise-app-staging.bootcamp.onxp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: exercise-app
                port: 
                  number: 80
  tls:
    - hosts:
        - exercise-app-staging.bootcamp.onxp.net
      secretName: tls-secret-exercise-app
---
